# rover-embedded-2025

./: .gitignore  .gitmodules  README.md  arm_angles.json
.metadata/: .log4j2.xml  version.ini
Antenna/: platformio.ini
Antenna/src/: antenna.cpp  compass.cpp  gps.cpp  main.cpp  vector_angle.h
Arm_Brushless_2026/: Robotics_Elbow_2026.stwb6  Robotics_Shoulder_2026.stwb6  Robotics_Test_2026.stwb6  Robotics_Waist_2026.stwb6
Arm_Brushless_2026/Docs/: ArmController_API_Documentation.md  CAN_Architecture.md  CAN_DataLogger_Architecture.md  CAN_Debugging_and_Simulation.md  CAN_FD_Configuration_Guide.md  CAN_processing_v2_notes.md  Debug_LED_Configuration.md  SCurve_Planner_Architecture_and_Fixes.md  Velocity_Control_Design.md
Arm_Brushless_2026/Robotics_Elbow_2026/: .mxproject  Robotics_Elbow_2026.ioc  Robotics_Elbow_2026.ioc.wb  Robotics_Elbow_2026.settings  Robotics_Elbow_2026.wbdef
Arm_Brushless_2026/Robotics_Shoulder_2026/: Robotics_Shoulder_2026.ioc  Robotics_Shoulder_2026.ioc.wb  Robotics_Shoulder_2026.settings  Robotics_Shoulder_2026.wbdef
Arm_Brushless_2026/Robotics_Test_2026/: .mxproject  Robotics_Test_2026.ioc  Robotics_Test_2026.ioc.wb  Robotics_Test_2026.settings  Robotics_Test_2026.wbdef
Arm_Brushless_2026/Robotics_Waist_2026/: Robotics_Waist_2026.ioc  Robotics_Waist_2026.ioc.wb  Robotics_Waist_2026.settings
Brushless-Motor-ESC/RoverArm2025/: .project  ARM2025Shoulder.stwb6  ARM2025WAIST.stwb6
Brushless-Motor-ESC/docs/: Maxon EC Flat 90W .json
CAN_Interface/: .gitignore  arm_tmux.sh  can_log.db-shm  launch_arm.bat  launch_arm.sh  pyproject.toml  start_dashboard.sh  start_logger.sh
CAN_Interface/esc_can/: __init__.py  commander.py  datalogger.py  protocol.py
CAN_Interface/esc_can.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
CAN_Interface/scripts/: TestForBrushed.py  arm_direct_tet.py  can_dashboard.py  can_logger.py  multi_field_extractor.py  ps4_arm_controller.py  test_canfd.py  test_commander.py
CANable-communication/: alljoints.py  armFollowerControl.py  armVisualization.py  config.ini  list.py
CANable-communication/CANable/: communication.py  communicationV2.py
CANable-communication/src/: TestMotorWithPS4.py  allArmJointsPS4.py  armCANCommunication  armCANCommunication.py  armCANCommunicationV2  armCANCommunicationV2.py  armFollowerControl  arm_angles.json  communication.py  driveCANCommunication.py  motorTests.py
CANable-communication/test/: TestMotorWithPS4.py
GPS/: .clangd  .gitignore  .mxproject  CMakeLists.txt  GPS.ioc  gps-test.ioc
GPS/EWARM/: Project.eww  gps-test.ewd  gps-test.ewp
GPS/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
GPS/python_connector/: modified_pantilt_firmware.py  pantilt_firmware.py  pantilt_tui.py
Headlights/: headlights_toggle.py
Headlights/src/: main.cpp
I2C_status_display/: platformio.ini  status_display.py  status_monitoring.py  teensy_reader.py
I2C_status_display/src/: main.cpp
I2C_status_display/test_screen/: test_screen.ino
Kill_Switch_Toggle/: kill_switch_toggle.py  platformio.ini
Kill_Switch_Toggle/src/: main.cpp
Laser_Toggle/: laser_toggle.py
Laser_Toggle/src/: main.cpp
ROSJam2/: .gitignore  .mxproject  CMakeLists.txt  README.md  ROSJam2.ioc  mpack_cmake.txt  setup-deps.bat  setup-deps.sh
ROSJam2/cmake/: mpack.cmake
ROSJam2/docs/: embedded.md  protocol.md
ROSJam2/flood/: Cargo.toml
ROSJam2/python-bench/: flood.py  ping.py  receive.py  varint.py
ROSJam2/python_test/: flood.py  ping.py  pyproject.toml  receive.py
ROSJam2/rust-bench/: Cargo.toml
ROSJam2/src/: CMakeLists.txt  buffers.c  buffers.h  default_rosjam_config.h  mpack_cmake.txt  rosjam.c  rosjam.h  rosjam_internal.h  tusb_config.h  usb_descriptors.c
ROSJam2/src/json_serde/: deserialization.c  deserialization.cc  deserialization.h  serialization.c  serialization.cc  serialization.h
Robotics_Arm_Brushed_firmware/: .cproject  .mxproject  .project  CMakeLists.txt  Robotics_Arm_Brushed_firmware.ioc
Robotics_Arm_Brushed_firmware/Debug/: Robotics_Arm_Brushed_firmware.elf  Robotics_Arm_Brushed_firmware.hex  Robotics_Arm_Brushed_firmware.list  Robotics_Arm_Brushed_firmware.map  makefile  objects.list
Robotics_Arm_Brushed_firmware/EWARM/: Project.eww  Robotics_Arm_Brushed_firmware.ewd  Robotics_Arm_Brushed_firmware.ewp
Robotics_Arm_Brushed_firmware/config_default/: CMakeCache.txt  Makefile  Robotics_Arm_Brushed_firmware.elf  Robotics_Arm_Brushed_firmware.map  cmake_install.cmake  compile_commands.json
Robotics_Arm_Brushed_firmware/python/: QRC_arm_firmware.py
Rover-Arm-Board-2025/: .cproject  .gitignore  .mxproject  .project  Rover-Arm-Board-2025 Debug.launch  Rover-Arm-Board-2025 Release.launch  Rover-Arm-Board-2025.ioc
Rover-Arm-Board-2025/Debug/: Rover-Arm-Board-2025.elf  Rover-Arm-Board-2025.list  Rover-Arm-Board-2025.map  makefile  objects.list
Rover-Arm-Board-2025/Release/: Rover-Arm-Board-2025.list  Rover-Arm-Board-2025.map  makefile  objects.list
Rover-Arm-Board-2025/scripts/: brushed_comms.py  test_brushed.py  test_test.py
base_station_antenna/: platformio.ini
base_station_antenna/src/: vector_angle.cpp
base_station_code/magnetometer_base_station/: platformio.ini
bms-firmware/: README.md  output.txt  platformio.ini
bms-firmware/src/: Registers.h  bms_interface.cpp  bms_interface.h  main.cpp  uart.py
bms-firmware/test/: test_interface.cpp
brushed_board_steopa/micro_ros_motor_firmware/: common.h  micro_ros_motor_firmware.ino
brushed_board_steopa/micro_ros_sub_pub/: micro_ros_sub_pub.ino
cobs/: Readme.md
cobs-c/src/: cobs.c
esp32_killswitch/: README.md
pantilt/: .mxproject  CMakeLists.txt  pantilt.ioc
pantilt-gps-firmware/: main.cpp  platformio.ini
ros-jam/: MicrocontrollerTesting.md  README.md  platformio.ini
science_box_firmware/: .cproject  .mxproject  .project  CMakeLists.txt  science_box_firmware.ioc  science_box_sensor_anaysis.py
screen_pls/: platformio.ini
steering-motor-firmware/: .cproject  .mxproject  README.md  steering-motor-firmware Debug.launch  steering-motor-firmware.ioc
uart-board/: .mxproject  CMakeLists.txt  UartBoard.ioc
(+3849 files in other folders)
